--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -12,11 +12,24 @@
     <div class="container">
         <header class="quiz-header">
             <div class="progress-info">
-                <h2>Question {{ question_num }} of {{ total_questions }}</h2>
-                <div class="progress-bar">
-                    <div class="progress {{ progress_class }}"></div>
+                <div class="question-counter">
+                    <h2>Question <span class="current-number">{{ question_num }}</span> of <span class="total-number">{{
+                            total_questions }}</span></h2>
+                    <div class="counter-subtitle">
+                        {{ question.difficulty|title }} Level • {{ question.category|replace('_', ' ')|title }}
+                    </div>
+                </div>
+
+                <div class="progress-container">
+                    <div class="progress-bar">
+                        <div class="progress {{ progress_class }}"></div>
+                    </div>
+                    <div class="progress-text">
+                        {{ question_num }}/{{ total_questions }} ({{ progress_percent|round|int }}%)
+                    </div>
                 </div>
             </div>
+
             <div class="difficulty-badge {{ question.difficulty }}">
                 {{ question.difficulty|title }}
             </div>
